fix print error

--- a/reinforcement_learning/example_1.ipynb
+++ b/reinforcement_learning/example_1.ipynb
@@ -2,28 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-07T11:57:17.717798Z",
-     "start_time": "2024-03-07T11:57:15.822054Z"
+     "end_time": "2024-03-07T12:03:01.896429Z",
+     "start_time": "2024-03-07T12:03:00.113375Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(...)? (backtest.py, line 180)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001B[0;36m(most recent call last)\u001B[0m:\n",
-      "\u001B[0m  File \u001B[1;32m/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/IPython/core/interactiveshell.py:3548\u001B[0m in \u001B[1;35mrun_code\u001B[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001B[0m\n",
-      "\u001B[0;36m  Cell \u001B[0;32mIn[2], line 7\u001B[0;36m\n\u001B[0;31m    import backtest as twp\u001B[0;36m\n",
-      "\u001B[0;36m  File \u001B[0;32m~/Library/CloudStorage/OneDrive-NielsenIQ/PycharmProjects/quant_analysis/reinforcement_learning/backtest.py:180\u001B[0;36m\u001B[0m\n\u001B[0;31m    print '\\r',self,\u001B[0m\n\u001B[0m    ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m Missing parentheses in call to 'print'. Did you mean print(...)?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# imports\n",
     "import numpy as np\n",
@@ -47,9 +35,14 @@
     "    return price"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-07T12:03:08.676406Z",
+     "start_time": "2024-03-07T12:03:08.672626Z"
+    }
    },
-   "id": "d093a77f8a6c1ebf"
+   "id": "d093a77f8a6c1ebf",
+   "execution_count": 12
   },
   {
    "cell_type": "code",
@@ -72,10 +65,14 @@
     "    return state, xdata"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-07T12:03:09.307749Z",
+     "start_time": "2024-03-07T12:03:09.305339Z"
+    }
    },
    "id": "9e72806613da1bea",
-   "execution_count": null
+   "execution_count": 13
   },
   {
    "cell_type": "code",
@@ -111,9 +108,14 @@
     "    return state, time_step, signal, terminal_state"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-07T12:03:09.818550Z",
+     "start_time": "2024-03-07T12:03:09.815626Z"
+    }
    },
-   "id": "5020f74ead06516c"
+   "id": "5020f74ead06516c",
+   "execution_count": 14
   },
   {
    "cell_type": "code",
@@ -144,12 +146,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-07T11:57:18.055286Z",
-     "start_time": "2024-03-07T11:57:18.050847Z"
+     "end_time": "2024-03-07T12:03:10.450016Z",
+     "start_time": "2024-03-07T12:03:10.446771Z"
     }
    },
    "id": "f89c76cc1925bd01",
-   "execution_count": 3
+   "execution_count": 15
   },
   {
    "cell_type": "code",
@@ -179,25 +181,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-07T11:57:18.669194Z",
-     "start_time": "2024-03-07T11:57:18.666119Z"
+     "end_time": "2024-03-07T12:03:11.425138Z",
+     "start_time": "2024-03-07T12:03:11.420376Z"
     }
    },
    "id": "af27f7d702b78ddd",
-   "execution_count": 4
+   "execution_count": 16
   },
   {
    "cell_type": "code",
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'keras.layers.core'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[5], line 5\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m#This neural network is the the Q-function, run it like this:\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;66;03m#model.predict(state.reshape(1,64), batch_size=1)\u001B[39;00m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mkeras\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodels\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Sequential\n\u001B[0;32m----> 5\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mkeras\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mlayers\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcore\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Dense, Dropout, Activation\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mkeras\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01moptimizers\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m RMSprop\n\u001B[1;32m      8\u001B[0m model \u001B[38;5;241m=\u001B[39m Sequential()\n",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'keras.layers.core'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.RMSprop` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.RMSprop`.\n"
      ]
     }
    ],
@@ -206,19 +204,19 @@
     "#model.predict(state.reshape(1,64), batch_size=1)\n",
     "\n",
     "from keras.models import Sequential\n",
-    "from keras.layers.core import Dense, Dropout, Activation\n",
+    "from keras.layers import Dense, Dropout, Activation\n",
     "from keras.optimizers import RMSprop\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Dense(4, init='lecun_uniform', input_shape=(2,)))\n",
+    "model.add(Dense(4, kernel_initializer='lecun_uniform', input_shape=(2,)))\n",
     "model.add(Activation('relu'))\n",
     "#model.add(Dropout(0.2)) I'm not using dropout in this example\n",
     "\n",
-    "model.add(Dense(4, init='lecun_uniform'))\n",
+    "model.add(Dense(4, kernel_initializer='lecun_uniform'))\n",
     "model.add(Activation('relu'))\n",
     "#model.add(Dropout(0.2))\n",
     "\n",
-    "model.add(Dense(4, init='lecun_uniform'))\n",
+    "model.add(Dense(4, kernel_initializer='lecun_uniform'))\n",
     "model.add(Activation('linear')) #linear output so we can have range of real-valued outputs\n",
     "\n",
     "rms = RMSprop()\n",
@@ -227,12 +225,144 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-07T11:57:54.244559Z",
-     "start_time": "2024-03-07T11:57:42.847432Z"
+     "end_time": "2024-03-07T12:03:12.346089Z",
+     "start_time": "2024-03-07T12:03:12.308656Z"
     }
    },
    "id": "185fda39bc7d19df",
-   "execution_count": 5
+   "execution_count": 17
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 42ms/step\n",
+      "1/1 [==============================] - 0s 7ms/step\n",
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3548, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/var/folders/_n/nybmwjg90rxfzcynss3bqkr80000gp/T/ipykernel_58946/421521869.py\", line 42, in <module>\n",
+      "    model.fit(state.reshape(1,2), y, batch_size=1, nb_epoch=1, verbose=0)\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/keras/src/utils/traceback_utils.py\", line 70, in error_handler\n",
+      "    raise e.with_traceback(filtered_tb) from None\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/keras/src/utils/traceback_utils.py\", line 67, in error_handler\n",
+      "    filtered_tb = _process_traceback_frames(e.__traceback__)\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "TypeError: Model.fit() got an unexpected keyword argument 'nb_epoch'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 2142, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1435, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1326, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1173, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1063, in format_exception_as_a_whole\n",
+      "    self.get_records(etb, number_of_lines_of_context, tb_offset) if etb else []\n",
+      "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1160, in get_records\n",
+      "    res = list(stack_data.FrameInfo.stack_data(etb, options=options))[tb_offset:]\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/stack_data/core.py\", line 597, in stack_data\n",
+      "    yield from collapse_repeated(\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/stack_data/utils.py\", line 83, in collapse_repeated\n",
+      "    yield from map(mapper, original_group)\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/stack_data/core.py\", line 587, in mapper\n",
+      "    return cls(f, options)\n",
+      "           ^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/stack_data/core.py\", line 551, in __init__\n",
+      "    self.executing = Source.executing(frame_or_tb)\n",
+      "                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/executing/executing.py\", line 283, in executing\n",
+      "    assert_(new_stmts <= stmts)\n",
+      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/py311/lib/python3.11/site-packages/executing/executing.py\", line 80, in assert_\n",
+      "    raise AssertionError(str(message))\n",
+      "AssertionError\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random, timeit\n",
+    "\n",
+    "start_time = timeit.default_timer()\n",
+    "\n",
+    "indata = load_data()\n",
+    "epochs = 10\n",
+    "gamma = 0.9 #a high gamma makes a long-term reward more valuable\n",
+    "epsilon = 1\n",
+    "learning_progress = []\n",
+    "#stores tuples of (S, A, R, S')\n",
+    "h = 0\n",
+    "signal = pd.Series(index=np.arange(len(indata)))\n",
+    "for i in range(epochs):\n",
+    "\n",
+    "    state, xdata = init_state(indata)\n",
+    "    status = 1\n",
+    "    terminal_state = 0\n",
+    "    time_step = 1\n",
+    "    #while learning is still in progress\n",
+    "    while(status == 1):\n",
+    "        #We start in state S\n",
+    "        #Run the Q function on S to get predicted reward values on all the possible actions\n",
+    "        qval = model.predict(state.reshape(1,2), batch_size=1)\n",
+    "        if (random.random() < epsilon) and i != epochs - 1: #maybe choose random action if not the last epoch\n",
+    "            action = np.random.randint(0,4) #assumes 4 different actions\n",
+    "        else: #choose best action from Q(s,a) values\n",
+    "            action = (np.argmax(qval))\n",
+    "        #Take action, observe new state S'\n",
+    "        new_state, time_step, signal, terminal_state = take_action(state, xdata, action, signal, time_step)\n",
+    "        #Observe reward\n",
+    "        reward = get_reward(new_state, time_step, action, xdata, signal, terminal_state, i)\n",
+    "        #Get max_Q(S',a)\n",
+    "        newQ = model.predict(new_state.reshape(1,2), batch_size=1)\n",
+    "        maxQ = np.max(newQ)\n",
+    "        y = np.zeros((1,4))\n",
+    "        y[:] = qval[:]\n",
+    "        if terminal_state == 0: #non-terminal state\n",
+    "            update = (reward + (gamma * maxQ))\n",
+    "        else: #terminal state (means that it is the last state)\n",
+    "            update = reward\n",
+    "        y[0][action] = update #target output\n",
+    "        model.fit(state.reshape(1,2), y, batch_size=1, nb_epoch=1, verbose=0)\n",
+    "        state = new_state\n",
+    "        if terminal_state == 1: #terminal state\n",
+    "            status = 0\n",
+    "    eval_reward = evaluate_Q(indata, model)\n",
+    "    print(\"Epoch #: %s Reward: %f Epsilon: %f\" % (i,eval_reward, epsilon))\n",
+    "    learning_progress.append((eval_reward))\n",
+    "    if epsilon > 0.1:\n",
+    "        epsilon -= (1.0/epochs)\n",
+    "\n",
+    "elapsed = np.round(timeit.default_timer() - start_time, decimals=2)\n",
+    "print(\"Completed in %f\" % (elapsed,))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-07T12:03:13.780759Z",
+     "start_time": "2024-03-07T12:03:13.651948Z"
+    }
+   },
+   "id": "a643c3fefd482836",
+   "execution_count": 18
   },
   {
    "cell_type": "code",
@@ -241,7 +371,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "a643c3fefd482836"
+   "id": "e121419624e50fa0"
   }
  ],
  "metadata": {
