--- a/reinforcement_learning/example_1.ipynb
+++ b/reinforcement_learning/example_1.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Linear increasing price"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "58f591813faf28c5"
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "initial_id",
