add warren buffet notebook

--- a/optimization/ETF_take_position.ipynb
+++ b/optimization/ETF_take_position.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T15:11:53.965166Z",
-     "start_time": "2024-07-07T15:11:52.849321Z"
+     "end_time": "2024-10-15T04:59:24.408424Z",
+     "start_time": "2024-10-15T04:59:23.790609Z"
     }
    },
    "cell_type": "code",
@@ -26,8 +26,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T15:21:10.879052Z",
-     "start_time": "2024-07-07T15:21:10.595454Z"
+     "end_time": "2024-10-15T04:59:26.031734Z",
+     "start_time": "2024-10-15T04:59:24.431689Z"
     }
    },
    "cell_type": "code",
@@ -55,8 +55,7 @@
      "output_type": "stream",
      "text": [
       "[*********************100%%**********************]  1 of 1 completed\n",
-      "[*********************100%%**********************]  1 of 1 completed\n",
-      "[*********************100%%**********************]  1 of 1 completed\n"
+      "[*********************100%%**********************]  1 of 1 completed"
      ]
     },
     {
@@ -66,7 +65,21 @@
       "/opt/homebrew/Caskroom/miniforge/base/envs/py312/lib/python3.12/site-packages/yfinance/utils.py:782: FutureWarning: The 'unit' keyword in TimedeltaIndex construction is deprecated and will be removed in a future version. Use pd.to_timedelta instead.\n",
       "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n",
       "/opt/homebrew/Caskroom/miniforge/base/envs/py312/lib/python3.12/site-packages/yfinance/utils.py:782: FutureWarning: The 'unit' keyword in TimedeltaIndex construction is deprecated and will be removed in a future version. Use pd.to_timedelta instead.\n",
-      "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n",
+      "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/opt/homebrew/Caskroom/miniforge/base/envs/py312/lib/python3.12/site-packages/yfinance/utils.py:782: FutureWarning: The 'unit' keyword in TimedeltaIndex construction is deprecated and will be removed in a future version. Use pd.to_timedelta instead.\n",
       "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n"
      ]
@@ -74,10 +87,10 @@
     {
      "data": {
       "text/plain": [
-       "    ETF   Best_day\n",
-       "0  VXUS  Wednesday\n",
-       "1   VTI  Wednesday\n",
-       "2   IAU     Monday"
+       "    ETF Best_day\n",
+       "0  VXUS   Monday\n",
+       "1   VTI   Monday\n",
+       "2   IAU  Tuesday"
       ],
       "text/html": [
        "<div>\n",
@@ -106,37 +119,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>VXUS</td>\n",
-       "      <td>Wednesday</td>\n",
+       "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>VTI</td>\n",
-       "      <td>Wednesday</td>\n",
+       "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>IAU</td>\n",
-       "      <td>Monday</td>\n",
+       "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-15T04:59:26.390613Z",
+     "start_time": "2024-10-15T04:59:26.389169Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "e7ce7d140f0d0583"
+   "id": "e7ce7d140f0d0583",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
