add warren buffet notebook

--- a/analysis/warren_buffet.ipynb
+++ b/analysis/warren_buffet.ipynb
@@ -2,15 +2,439 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-11-03T09:26:42.526583Z",
+     "start_time": "2024-11-03T09:26:41.811444Z"
+    }
    },
-   "outputs": [],
    "source": [
-    ""
-   ]
+    "import yfinance as yf\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ],
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-03T10:00:40.467939Z",
+     "start_time": "2024-11-03T10:00:40.396491Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def get_financial_data(ticker):\n",
+    "    try:\n",
+    "        stock = yf.Ticker(ticker)\n",
+    "        info = stock.info\n",
+    "        # financials = stock.financials\n",
+    "        # balance_sheet = stock.balance_sheet\n",
+    "        cashflow = stock.cashflow\n",
+    "        earnings = stock.earnings\n",
+    "\n",
+    "        # Extract necessary metrics\n",
+    "        roic = info.get('returnOnInvestment', np.nan)\n",
+    "        roe = info.get('returnOnEquity', np.nan)\n",
+    "        gross_margin = info.get('grossMargins', np.nan)\n",
+    "        revenue_growth = calculate_revenue_growth(earnings)\n",
+    "        free_cash_flow = calculate_free_cash_flow(cashflow)\n",
+    "        debt_to_equity = info.get('debtToEquity', np.nan)\n",
+    "        earnings_stability = calculate_earnings_stability(earnings)\n",
+    "\n",
+    "        return {\n",
+    "            'Ticker': ticker,\n",
+    "            'ROIC': roic,\n",
+    "            'ROE': roe,\n",
+    "            'Gross Margin': gross_margin,\n",
+    "            'Revenue Growth': revenue_growth,\n",
+    "            'Free Cash Flow': free_cash_flow,\n",
+    "            'Debt to Equity': debt_to_equity,\n",
+    "            'Earnings Stability': earnings_stability\n",
+    "        }\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error fetching data for {ticker}: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "# Calculate Revenue Growth over the last 5 years\n",
+    "def calculate_revenue_growth(earnings):\n",
+    "    try:\n",
+    "        if len(earnings) >= 5:\n",
+    "            revenue_t0 = earnings['Revenue'].iloc[0]\n",
+    "            revenue_t4 = earnings['Revenue'].iloc[4]\n",
+    "            growth = (revenue_t4 - revenue_t0) / revenue_t0\n",
+    "            return growth\n",
+    "        else:\n",
+    "            return np.nan\n",
+    "    except:\n",
+    "        return np.nan\n",
+    "\n",
+    "# Calculate Free Cash Flow (Simplified as Cash from Operations - Capital Expenditures)\n",
+    "def calculate_free_cash_flow(cashflow):\n",
+    "    try:\n",
+    "        cfo = cashflow.loc['Total Cash From Operating Activities'][0]\n",
+    "        capex = cashflow.loc['Capital Expenditures'][0] if 'Capital Expenditures' in cashflow.index else 0\n",
+    "        fcf = cfo + capex  # Capex is usually negative\n",
+    "        return fcf\n",
+    "    except:\n",
+    "        return np.nan\n",
+    "\n",
+    "# Calculate Earnings Stability (Standard Deviation of Earnings Growth)\n",
+    "def calculate_earnings_stability(earnings):\n",
+    "    try:\n",
+    "        if len(earnings) >= 5:\n",
+    "            earnings_growth = earnings['Earnings'].pct_change().dropna()\n",
+    "            if len(earnings_growth) > 1:\n",
+    "                std_dev = earnings_growth.std()\n",
+    "                return std_dev\n",
+    "            else:\n",
+    "                return np.nan\n",
+    "        else:\n",
+    "            return np.nan\n",
+    "    except:\n",
+    "        return np.nan\n",
+    "\n",
+    "# Define scoring functions for each metric\n",
+    "def score_roic(roic):\n",
+    "    if pd.isna(roic):\n",
+    "        return 0\n",
+    "    elif roic >= 15:\n",
+    "        return 1\n",
+    "    elif roic >= 10:\n",
+    "        return 0.7\n",
+    "    elif roic >= 5:\n",
+    "        return 0.4\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "def score_roe(roe):\n",
+    "    if pd.isna(roe):\n",
+    "        return 0\n",
+    "    elif roe >= 20:\n",
+    "        return 1\n",
+    "    elif roe >= 15:\n",
+    "        return 0.7\n",
+    "    elif roe >= 10:\n",
+    "        return 0.4\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "def score_gross_margin(gm):\n",
+    "    if pd.isna(gm):\n",
+    "        return 0\n",
+    "    elif gm >= 50:\n",
+    "        return 1\n",
+    "    elif gm >= 40:\n",
+    "        return 0.7\n",
+    "    elif gm >= 30:\n",
+    "        return 0.4\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "def score_revenue_growth(rg):\n",
+    "    if pd.isna(rg):\n",
+    "        return 0\n",
+    "    elif rg >= 0.15:\n",
+    "        return 1\n",
+    "    elif rg >= 0.10:\n",
+    "        return 0.7\n",
+    "    elif rg >= 0.05:\n",
+    "        return 0.4\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "def score_free_cash_flow(fcf):\n",
+    "    if pd.isna(fcf):\n",
+    "        return 0\n",
+    "    elif fcf > 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "def score_debt_to_equity(de):\n",
+    "    if pd.isna(de):\n",
+    "        return 0\n",
+    "    elif de < 0.5:\n",
+    "        return 1\n",
+    "    elif de < 1:\n",
+    "        return 0.7\n",
+    "    elif de < 2:\n",
+    "        return 0.4\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "def score_earnings_stability(es):\n",
+    "    if pd.isna(es):\n",
+    "        return 0\n",
+    "    elif es < 0.05:\n",
+    "        return 1\n",
+    "    elif es < 0.10:\n",
+    "        return 0.7\n",
+    "    elif es < 0.15:\n",
+    "        return 0.4\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "\n",
+    "def compute_moat_score(row):\n",
+    "    scores = [\n",
+    "        score_roic(row['ROIC']),\n",
+    "        score_roe(row['ROE']),\n",
+    "        score_gross_margin(row['Gross Margin']),\n",
+    "        score_revenue_growth(row['Revenue Growth']),\n",
+    "        score_free_cash_flow(row['Free Cash Flow']),\n",
+    "        score_debt_to_equity(row['Debt to Equity']),\n",
+    "        score_earnings_stability(row['Earnings Stability'])\n",
+    "    ]\n",
+    "    # Assign equal weights or customize as needed\n",
+    "    moat_score = np.sum(scores) / len(scores)  # Average score\n",
+    "    return moat_score\n",
+    "\n",
+    "\n",
+    "def get_moat_stocks(ticker):\n",
+    "    financial_data = []\n",
+    "    data = get_financial_data(ticker)\n",
+    "    if data:\n",
+    "        financial_data.append(data)\n",
+    "\n",
+    "    df = pd.DataFrame(financial_data)\n",
+    "    moat_stock = df.apply(compute_moat_score, axis=1) \n",
+    "    return moat_stock.iloc[0]\n",
+    "\n",
+    "get_moat_stocks('AAPL')"
+   ],
+   "id": "71d3dcbaa4dec03b",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/py313/lib/python3.13/site-packages/yfinance/scrapers/fundamentals.py:33: DeprecationWarning: 'Ticker.earnings' is deprecated as not available via API. Look for \"Net Income\" in Ticker.income_stmt.\n",
+      "  warnings.warn(\"'Ticker.earnings' is deprecated as not available via API. Look for \\\"Net Income\\\" in Ticker.income_stmt.\", DeprecationWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.0)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 29
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-03T10:00:43.101325Z",
+     "start_time": "2024-11-03T10:00:42.765366Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# List of stock tickers to analyze\n",
+    "# For demonstration, we're using S&P 500 tickers. You can expand this list as needed.\n",
+    "sp500_tickers = pd.read_html('https://en.wikipedia.org/wiki/List_of_S%26P_500_companies')[0]['Symbol'].tolist()\n",
+    "\n",
+    "def get_interest_coverage(ticker):\n",
+    "    \"\"\"\n",
+    "    Fetches the Interest Coverage Ratio for a given stock ticker.\n",
+    "\n",
+    "    Parameters:\n",
+    "    ticker (str): The stock ticker symbol (e.g., 'AAPL').\n",
+    "\n",
+    "    Returns:\n",
+    "    float or None: The Interest Coverage Ratio, or None if data is unavailable.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        stock = yf.Ticker(ticker)\n",
+    "        income_statement = stock.financials\n",
+    "\n",
+    "        # Ensure the necessary data is present\n",
+    "        if 'Operating Income' in income_statement.index and 'Interest Expense' in income_statement.index:\n",
+    "            operating_income = income_statement.loc['Operating Income'][0]\n",
+    "            interest_expense = income_statement.loc['Interest Expense'][0]\n",
+    "\n",
+    "            # Handle cases where Interest Expense is zero to avoid division by zero\n",
+    "            if interest_expense != 0:\n",
+    "                interest_coverage = operating_income / abs(interest_expense)\n",
+    "                return round(interest_coverage, 2)\n",
+    "            else:\n",
+    "                print(f\"Interest Expense is zero for {ticker}. Cannot compute Interest Coverage Ratio.\")\n",
+    "                return None\n",
+    "        else:\n",
+    "            print(f\"Necessary financial data not available for {ticker}.\")\n",
+    "            return None\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error fetching data for {ticker}: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "def get_financials(ticker):\n",
+    "    try:\n",
+    "        stock = yf.Ticker(ticker)\n",
+    "        balance = stock.balance_sheet\n",
+    "        cashflow = stock.cashflow\n",
+    "        income = stock.financials\n",
+    "        info = stock.info\n",
+    "\n",
+    "        # Extract necessary metrics\n",
+    "        debt_equity = info.get('debtToEquity', np.nan)\n",
+    "        current_ratio = info.get('currentRatio', np.nan)\n",
+    "        price_book = info.get('priceToBook', np.nan)\n",
+    "        roe = info.get('returnOnEquity', np.nan) * 100  # Convert to percentage\n",
+    "        roa = info.get('returnOnAssets', np.nan) * 100    # Convert to percentage\n",
+    "        interest_coverage = get_interest_coverage(ticker)\n",
+    "        dividend_growth = info.get('dividendRate', np.nan)  # Simplified\n",
+    "        eps_growth = info.get('earningsQuarterlyGrowth', np.nan)\n",
+    "\n",
+    "        # Book value and EPS growth could be more complex to calculate\n",
+    "        # Here we'll use simplified placeholders\n",
+    "        book_value_growth = info.get('bookValue', np.nan)  # Placeholder\n",
+    "        eps = info.get('earningsPerShare', np.nan)         # Latest EPS\n",
+    "\n",
+    "        # Economic moat is not directly available; using 'moat' information if available\n",
+    "        moat = get_moat_stocks(ticker)\n",
+    "\n",
+    "        return {\n",
+    "            'Ticker': ticker,\n",
+    "            'Debt/Equity': debt_equity,\n",
+    "            'Current Ratio': current_ratio,\n",
+    "            'Price/Book': price_book,\n",
+    "            'ROE (%)': roe,\n",
+    "            'ROA (%)': roa,\n",
+    "            'Interest Coverage': interest_coverage,\n",
+    "            'Moat': moat,\n",
+    "            'EPS Growth': eps_growth,\n",
+    "            # Additional fields can be added as needed\n",
+    "        }\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error fetching data for {ticker}: {e}\")\n",
+    "        return None"
+   ],
+   "id": "ddab49f2c40b2d5f",
+   "outputs": [],
+   "execution_count": 30
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Fetch financial data for all tickers\n",
+    "financial_data = []\n",
+    "for ticker in sp500_tickers[:50]:  # For demonstration, we're limiting to the first 10 tickers\n",
+    "    data = get_financials(ticker)\n",
+    "    if data:\n",
+    "        financial_data.append(data)\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "df = pd.DataFrame(financial_data)"
+   ],
+   "id": "9afe8ae4a5c6647e"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-03T10:05:38.039214Z",
+     "start_time": "2024-11-03T10:05:38.034326Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Apply Buffett's criteria\n",
+    "filtered_df = df[\n",
+    "    (df['Debt/Equity'] < 0.5) &\n",
+    "    (df['Current Ratio'] > 1.5) & (df['Current Ratio'] < 2.5) &\n",
+    "    (df['Price/Book'] < 1.5) &\n",
+    "    (df['ROE (%)'] > 8) &\n",
+    "    (df['ROA (%)'] > 6) &\n",
+    "    (df['Interest Coverage'] > 5) &\n",
+    "    # (df['Moat'] > 0) &\n",
+    "    (df['EPS Growth'] > 0.08)  # Assuming 8% EPS growth\n",
+    "]\n"
+   ],
+   "id": "9e32afe0561fcc58",
+   "outputs": [],
+   "execution_count": 35
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-03T10:05:41.985864Z",
+     "start_time": "2024-11-03T10:05:41.982550Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "filtered_df",
+   "id": "44fcdeb75d4760e1",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Ticker, Debt/Equity, Current Ratio, Price/Book, ROE (%), ROA (%), Interest Coverage, Moat, EPS Growth]\n",
+       "Index: []"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Debt/Equity</th>\n",
+       "      <th>Current Ratio</th>\n",
+       "      <th>Price/Book</th>\n",
+       "      <th>ROE (%)</th>\n",
+       "      <th>ROA (%)</th>\n",
+       "      <th>Interest Coverage</th>\n",
+       "      <th>Moat</th>\n",
+       "      <th>EPS Growth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 36
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "70fd99b16d5829b6"
   }
  ],
  "metadata": {
